--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Auction Website</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Auction Gallery</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .gallery img {
+      width: 100%;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
+    }
+    /* Modal Styling */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      padding-top: 60px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.8);
+    }
+    .modal-content {
+      margin: auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 800px;
+      position: relative;
+    }
+    .close {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      font-size: 30px;
+      cursor: pointer;
+    }
+    .modal-images {
+      display: flex;
+      overflow-x: scroll;
+    }
+    .modal-images img {
+      margin-right: 10px;
+      width: 200px;
+    }
+    .description {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to My Auction Website</h1>
-    <p>This is a simple static site hosted on Netlify.</p>
+
+  <div class="gallery">
+    <img src="image1.jpg" alt="Item 1" onclick="openModal(1)">
+    <img src="image2.jpg" alt="Item 2" onclick="openModal(2)">
+    <img src="image3.jpg" alt="Item 3" onclick="openModal(3)">
+    <!-- More images -->
+  </div>
+
+  <!-- Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <div class="modal-images">
+        <img src="image1.jpg" alt="Modal Image 1">
+        <img src="image2.jpg" alt="Modal Image 2">
+        <!-- Add more images dynamically -->
+      </div>
+      <div class="description">
+        <p>This is a description for the auction item. You can add more details here.</p>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function openModal(item) {
+      document.getElementById('myModal').style.display = "block";
+    }
+    function closeModal() {
+      document.getElementById('myModal').style.display = "none";
+    }
+  </script>
+
 </body>
 </html>
