--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,20 @@
   <title>Content Manager</title>
 </head>
 <body>
-  <!-- Add this script to load Netlify CMS -->
+  <!-- Include the Netlify Identity Widget script -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+  </script>
+  <!-- Include Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
 </body>
 </html>
