--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <img src="image1.jpg" alt="Item 1" onclick="openModal(1)">
     <img src="image2.jpg" alt="Item 2" onclick="openModal(2)">
     <img src="image3.jpg" alt="Item 3" onclick="openModal(3)">
-    <!-- More images -->
+    <img src="image4.jpg" alt="Item 4" onclick="openModal(4)">
+    <img src="image5.jpg" alt="Item 5" onclick="openModal(5)">
   </div>
 
   <!-- Modal -->
@@ -100,3 +101,4 @@
 
 </body>
 </html>
+
