--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Welcome Heading -->
   <div class="welcome">
-    Welcome to AuctionAisle
+    Welcome to auctionAIsle
   </div>
 
   <div class="gallery">
