--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <div class="description">
         <p></p>
       </div>
+      <div class="countdown"></div> <!-- Countdown Timer -->
+      <div class="progress-container">
+        <div class="progress-bar"></div>
+      </div> <!-- Progress Bar -->
     </div>
   </div>
 
