--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div class="description">
         <p></p>
       </div>
+      <!-- Countdown Timer Container -->
+      <div class="countdown-timer"></div>
     </div>
   </div>
 
