--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <p></p>
       </div>
       <!-- Countdown Timer Container -->
-      <div class="countdown-timer"></div>
+      <div class="countdown-timer">
+        <div class="timer-bar"></div> <!-- Light grey background bar -->
+        <div class="timer-bar-static-fill"></div> <!-- Static dark grey bar (half-width) -->
+        <span class="timer-text"></span> <!-- Timer text -->
+      </div>
     </div>
   </div>
 
@@ -45,3 +49,4 @@
 
 </body>
 </html>
+
