--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </div>
       <!-- Countdown Timer Container -->
       <div class="countdown-timer">
-        <div class="timer-bar"></div> <!-- Light grey background bar -->
-        <div class="timer-bar-static-fill"></div> <!-- Static dark grey bar (half-width) -->
+        <div class="light-grey-bar"></div> <!-- Light grey background bar -->
+        <div class="dark-grey-bar"></div> <!-- Dark grey bar -->
         <span class="timer-text"></span> <!-- Timer text -->
       </div>
     </div>
@@ -49,4 +49,5 @@
 
 </body>
 </html>
+
 
