--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal()">&times;</span>
+      <div id="left-arrow" class="arrow" style="display: none;">&#8249;</div>
       <div class="modal-images"></div>
+      <div id="right-arrow" class="arrow" style="display: none;">&#8250;</div>
       <div class="description">
         <p></p>
       </div>
@@ -49,5 +51,3 @@
 
 </body>
 </html>
-
-
