--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close" onclick="closeModal()">&times;</span>
-      <div id="left-arrow" class="arrow" style="display: none;">&#8249;</div>
+      <button class="modal-arrow" id="prevArrow" onclick="prevImage()">&#8249;</button>
       <div class="modal-images"></div>
-      <div id="right-arrow" class="arrow" style="display: none;">&#8250;</div>
+      <button class="modal-arrow" id="nextArrow" onclick="nextImage()">&#8250;</button>
       <div class="description">
         <p></p>
       </div>
