--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Welcome Heading -->
   <div class="welcome">
-    Welcome to AuctionAisle
+    Site under Construction
   </div>
 
   <!-- Empty Gallery to be populated by JavaScript -->
