--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Auction Gallery</title>
+  <title>Aucionaisle - curated auctions</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <!-- Welcome Heading -->
   <div class="welcome">
-    Site under Construction
+    Welcome to Auctionaisle
   </div>
 
   <!-- Empty Gallery to be populated by JavaScript -->
