--- a/mirg.html
+++ b/mirg.html
@@ -7,27 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="mirg-header">
         <h1>Introducing Our Product</h1>
     </header>
 
     <main>
-        <section class="product-intro">
+        <section class="mirg-section">
             <h2>About the Product</h2>
             <p>Welcome to the future of design. Our product blends elegance, functionality, and innovation to bring you something truly unique.</p>
             <img src="your-product-image.jpg" alt="Product Image">
         </section>
 
-        <section class="product-details">
-            <h2>Features</h2>
-            <ul>
-                <li>Feature 1: Stunning design</li>
-                <li>Feature 2: Premium materials</li>
-                <li>Feature 3: Thoughtful functionality</li>
-            </ul>
+        <section class="mirg-section mirg-features">
+            <div class="mirg-feature">
+                <h3>Feature 1</h3>
+                <p>Stunning design</p>
+            </div>
+            <div class="mirg-feature">
+                <h3>Feature 2</h3>
+                <p>Premium materials</p>
+            </div>
+            <div class="mirg-feature">
+                <h3>Feature 3</h3>
+                <p>Thoughtful functionality</p>
+            </div>
         </section>
 
-        <section class="signup">
+        <section class="mirg-section mirg-signup-form">
             <h2>Stay Updated</h2>
             <p>Sign up to learn more and stay updated on availability.</p>
             <form action="#" method="POST">
@@ -38,7 +44,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="mirg-section">
         <p>&copy; 2025 Your Website Name. All rights reserved.</p>
     </footer>
 </body>
