--- a/mirg.html
+++ b/mirg.html
@@ -8,32 +8,27 @@
 </head>
 <body>
     <header class="mirg-header">
-        <h1>Introducing Our Product</h1>
+        <h1>You're early.</h1>
+        <p>The auction isn't live yet, but you can be the first to know.</p>
     </header>
 
     <main>
-        <section class="mirg-section">
+        <section class="product-intro">
             <h2>About the Product</h2>
             <p>Welcome to the future of design. Our product blends elegance, functionality, and innovation to bring you something truly unique.</p>
             <img src="your-product-image.jpg" alt="Product Image">
         </section>
 
-        <section class="mirg-section mirg-features">
-            <div class="mirg-feature">
-                <h3>Feature 1</h3>
-                <p>Stunning design</p>
-            </div>
-            <div class="mirg-feature">
-                <h3>Feature 2</h3>
-                <p>Premium materials</p>
-            </div>
-            <div class="mirg-feature">
-                <h3>Feature 3</h3>
-                <p>Thoughtful functionality</p>
-            </div>
+        <section class="product-details">
+            <h2>Features</h2>
+            <ul>
+                <li>Feature 1: Stunning design</li>
+                <li>Feature 2: Premium materials</li>
+                <li>Feature 3: Thoughtful functionality</li>
+            </ul>
         </section>
 
-        <section class="mirg-section mirg-signup-form">
+        <section class="signup">
             <h2>Stay Updated</h2>
             <p>Sign up to learn more and stay updated on availability.</p>
             <form action="#" method="POST">
@@ -44,8 +39,9 @@
         </section>
     </main>
 
-    <footer class="mirg-section">
+    <footer>
         <p>&copy; 2025 Your Website Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
