--- a/mirg.html
+++ b/mirg.html
@@ -12,19 +12,26 @@
         <p>The auction isn't live yet, but you can be the first to know.</p>
     </header>
 
-    <main>
+    <main class="mirg-main">
         <section class="product-intro">
-            <h2>About the Product</h2>
             <p>Welcome to the future of design. Our product blends elegance, functionality, and innovation to bring you something truly unique.</p>
-            <img src="your-product-image.jpg" alt="Product Image">
+        </section>
+
+        <section class="product-images">
+            <h2>Discover the Design</h2>
+            <div class="image-gallery">
+                <img src="image1.jpg" alt="Product Image 1">
+                <img src="image2.jpg" alt="Product Image 2">
+                <img src="image3.jpg" alt="Product Image 3">
+            </div>
         </section>
 
         <section class="product-details">
             <h2>Features</h2>
             <ul>
-                <li>Feature 1: Stunning design</li>
-                <li>Feature 2: Premium materials</li>
-                <li>Feature 3: Thoughtful functionality</li>
+                <li>Stunning design</li>
+                <li>Premium materials</li>
+                <li>Thoughtful functionality</li>
             </ul>
         </section>
 
@@ -44,4 +51,3 @@
     </footer>
 </body>
 </html>
-
