--- a/mirg.html
+++ b/mirg.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Introducing Our Product</h1>
+    <header class="mirg-header">
+        <h1>You're early.</h1>
+        <p>The auction isn't live yet, but you can be the first to know.</p>
     </header>
 
     <main>
@@ -43,3 +44,4 @@
     </footer>
 </body>
 </html>
+
