--- a/mirg.html
+++ b/mirg.html
@@ -22,7 +22,7 @@
 
         <section class="text-section">
             <h2>The auction isn't live yet, but you can be the first to know.</h2>
-            <p id="description"></p>
+            <p id="description">Loading description...</p>
             <form action="#" method="POST" class="signup-form">
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
@@ -35,6 +35,6 @@
         <p>&copy; 2025 Auctionaisle. All rights reserved.</p>
     </footer>
 
-    <script src="scripts.js"></script>
+    <script src="mirg.js"></script>
 </body>
 </html>
