--- a/mirg.html
+++ b/mirg.html
@@ -7,34 +7,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="mirg-header">
-        <h1>You're early.</h1>
-        <p>The auction isn't live yet, but you can be the first to know.</p>
-    </header>
+    <!-- Main Box Wrapper -->
+    <div class="product-container-wrapper">
+        <div class="product-container">
+            <header class="mirg-header">
+                <h1>You're early.</h1>
+                <p>The auction isn't live yet, but you can be the first to know.</p>
+            </header>
 
-    <main class="product-container">
-        <section class="image-section">
-            <div class="main-image">
-                <img id="mainImage" src="" alt="Main Product Image">
+            <div class="product-container-content">
+                <section class="image-section">
+                    <div class="main-image">
+                        <img id="mainImage" src="" alt="Main Product Image">
+                    </div>
+                    <div class="thumbnail-gallery" id="thumbnailGallery"></div>
+                </section>
+
+                <section class="text-section">
+                    <h2>The auction isn't live yet, but you can be the first to know.</h2>
+                    <p id="description"></p>
+                    <form action="#" method="POST" class="signup-form">
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                        <button type="submit">Sign Up</button>
+                    </form>
+                </section>
             </div>
-            <div class="thumbnail-gallery" id="thumbnailGallery"></div>
-        </section>
-
-        <section class="text-section">
-            <h2>The auction isn't live yet, but you can be the first to know.</h2>
-            <p id="description">Loading description...</p>
-            <form action="#" method="POST" class="signup-form">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email" required>
-                <button type="submit">Sign Up</button>
-            </form>
-        </section>
-    </main>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2025 Auctionaisle. All rights reserved.</p>
     </footer>
 
-    <script src="mirg.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
