--- a/mirg.html
+++ b/mirg.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Wrapper for the main content -->
     <div class="wrapper">
         <header class="mirg-header">
             <h1>You're early.</h1>
@@ -37,7 +38,6 @@
         <p>&copy; 2025 Auctionaisle. All rights reserved.</p>
     </footer>
 
-    <!-- Include mirg.js for fetching the data -->
     <script src="mirg.js"></script>
 </body>
 </html>
