--- a/mirg.html
+++ b/mirg.html
@@ -10,8 +10,8 @@
     <!-- Wrapper for the main content -->
     <div class="wrapper">
         <header class="mirg-header">
-            <h1>You're early.</h1>
-            <p>The auction isn't live yet, but you can be the first to know.</p>
+            <h1>You're early</h1>
+            <p>The auction isn't live yet.</p>
         </header>
 
         <main class="product-container">
@@ -23,10 +23,10 @@
             </section>
 
             <section class="text-section">
-                <h2>The auction isn't live yet, but you can be the first to know.</h2>
+                <h2>This peice isn't for sale just yet, but you can be the first to know when it is!</h2>
                 <p id="description"></p>
                 <form action="#" method="POST" class="signup-form">
-                    <label for="email">Email:</label>
+                    <label for="email">Sign up for more information:</label>
                     <input type="email" id="email" name="email" placeholder="Enter your email" required>
                     <button type="submit">Sign Up</button>
                 </form>
