--- a/mirg.html
+++ b/mirg.html
@@ -23,7 +23,7 @@
             </section>
 
             <section class="text-section">
-                <h2>This peice isn't for sale just yet, but you can be the first to know when it is!</h2>
+                <h2>This object isn't for sale just yet, but you can be the first to know when it is!</h2>
                 <p id="description"></p>
                 <form action="#" method="POST" class="signup-form">
                     <label for="email">Sign up for more information:</label>
@@ -35,7 +35,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Auctionaisle. All rights reserved.</p>
+        <p>&copy; 2025 Auctionaisle. 2025 Mirg Objects. All rights reserved.</p>
     </footer>
 
     <script src="mirg.js"></script>
