--- a/mirg.html
+++ b/mirg.html
@@ -24,7 +24,7 @@
 
             <section class="text-section">
                 <h2>This object isn't for sale just yet, but you can be the first to know when it is!</h2>
-                <p id="description"></p>
+                <p id="description">A wonderful piece that will surely add elegance to any collection.</p>
                 <form action="#" method="POST" class="signup-form">
                     <label for="email">Sign up for more information:</label>
                     <input type="email" id="email" name="email" placeholder="Enter your email" required>
