--- a/mirg.html
+++ b/mirg.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Page</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
 
             <section class="text-section">
                 <h2>This object isn't for sale just yet, but you can be the first to know when it is!</h2>
-                <p id="description">A wonderful piece that will surely add elegance to any collection.</p>
+                <p id="description">Not quite a dining table, not quite a coffee table—but definitely all the mid-century style you need. If you’re like Finn Juhl and have space for a table in your bedroom, this should be right up your alley!</p>
                 <form action="#" method="POST" class="signup-form">
                     <label for="email">Sign up for more information:</label>
                     <input type="email" id="email" name="email" placeholder="Enter your email" required>
@@ -35,7 +36,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Auctionaisle. 2025 Mirg Objects. All rights reserved.</p>
+        <p>&copy; 2025 Auctionaisle. All rights reserved.</p>
     </footer>
 
     <script src="mirg.js"></script>
