--- a/mirg.html
+++ b/mirg.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="mirg-page">
     <!-- Wrapper for the main content -->
     <div class="wrapper">
         <header class="mirg-header">
